--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -29,3 +29,6 @@ suites:
         environment:
           CONFIGURE_OPTS: --no-tcmalloc --no-dev-docs
       global: 2.1.1
+      gems:
+        "2.1.1":
+            - name: "bundler"
